--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <!-- هدر -->
   <div class="section header">
     <!-- این خطی هست که باید آدرس یا نام فایل عکست رو بذاری -->
-    <img src="https://s6.uupload.ir/files/img_2196_p217.jpeg" alt="Amir Mahdi Amiri" class="profile-pic">
+    <img src="https://s6.uupload.ir/files/img_20251209_095821_049_o3dj.jpg" alt="Amir Mahdi Amiri" class="profile-pic">
     <h1>Amir Mahdi Amiri</h1>
     <h2>ترکیبی از خلاقیت و تکنولوژی با علاقه به کامپیوتر</h2>
   </div>
@@ -134,3 +134,4 @@
 </body>
 
 </html>
+
